# Eve-Auth-Manager

./: .env.dev  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.github/agents/: Documentation Writer.agent.md  test_writer.agent.md
.github/workflows/: pypi-publish.yaml
src/eve_auth_manager/: __init__.py  models.py  protocols.py  settings.py  token_tool.py
src/eve_auth_manager/auth/: oauth_tokens.py  request_authentication_code.py  token_tools.py
src/eve_auth_manager/cli/: __init__.py  authorize.py  helpers.py  main_typer.py  version.py
src/eve_auth_manager/helpers/: http_session_factory.py  markdown_table.py
src/eve_auth_manager/sqlite/: connection_helpers.py  manager.py  query_helpers.py  table_definitions.sql
src/pfmsoft/eve_auth_manager/: __init__.py  protocols.py  settings.py
tests/eve_auth_manager/: test_auth_code_challenge.py  test_auth_oauth_tokens.py  test_auth_request_authentication_code.py  test_auth_secure_random_string.py  test_auth_token_tools.py  test_cli_authorize.py  test_cli_characters_add.py  test_cli_characters_display.py  test_cli_characters_refresh.py  test_cli_characters_revoke.py  test_cli_characters_search_id.py  test_cli_credentials_add.py  test_cli_credentials_display.py  test_cli_credentials_remove.py  test_cli_helpers.py  test_cli_main_typer.py  test_cli_util_reset.py  test_cli_version.py  test_helpers_http_session_factory.py  test_helpers_instant_helpers.py  test_helpers_json_io.py  test_helpers_markdown_table.py  test_logging_config.py  test_models_protocols.py  test_settings.py  test_sqlite_connection_helpers.py  test_sqlite_manager.py  test_sqlite_query_helpers.py
tests/pfmsoft/eve_auth_manager/: test_auth_code_challenge.py  test_auth_oauth_tokens.py  test_auth_request_authentication_code.py  test_auth_secure_random_string.py  test_auth_token_tools.py  test_cli_authorize.py  test_cli_characters_add.py  test_cli_characters_display.py  test_cli_characters_refresh.py  test_cli_characters_revoke.py  test_cli_characters_search_id.py  (+17 more)
(+40 files in other folders)
