[project]
name = "eve-auth-manager"
version = "0.4.0"
description = "CLI and API helpers for acquiring, storing, and refreshing EVE Online ESI OAuth tokens"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx2>=2.5.0",
    "mdformat>=1.0.0",
    "mdformat-gfm>=1.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyjwt[crypto]>=2.13.0",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "typer>=0.26.8",
    "whenever>=0.10.0",
]
# https://packaging.python.org/en/latest/specifications/license-expression/#specification
license = "MIT"
# https://packaging.python.org/en/latest/specifications/pyproject-toml/#license-files
license-files = ["LICENSE"]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[project.urls]
Documentation = "https://github.com/DonalChilde/Eve-Auth-Manager#readme"
# Documentation_rtd = "https://esi-link.readthedocs.io"
Issues = "https://github.com/DonalChilde/Eve-Auth-Manager/issues"
Source = "https://github.com/DonalChilde/Eve-Auth-Manager"

[tool.uv]
exclude-newer = "1 week"

[dependency-groups]
dev = ["pytest>=9.1.1", "pytest-cov>=7.1.0", "ruff>=0.15.20"]

[project.scripts]
# script entry-points
# COMMAND_NAME = "PATH.TO.ENTRY.MODULE:ENTRY_FUNCTION"

eve-auth = "eve_auth_manager.cli.main_typer:app"

[tool.pytest.ini_options]
pythonpath = "src"
log_file = "dev/pytest-logs/tests.log"
log_file_date_format = "%Y-%m-%dT%H:%M:%S.%f%z"
log_file_format = "%(asctime)s %(levelname)s:%(funcName)s: %(message)s [in %(pathname)s:%(lineno)d]"
log_file_level = "INFO"

[tool.coverage.run]
branch = true
parallel = true

[tool.ruff.lint]
select = ["B", "UP", "D", "DOC", "FIX", "I", "F401"]
# non-imperative-mood (D401)
ignore = ["D401", "D101", "D421"]
# extend-select = ["I"]


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88
